# nice

./: .gitignore  README.md  nx.json  package.json  todo.md  tsconfig.base.json
apps/nice-action/: jest.config.ts  project.json
apps/nice-action-delete/: jest.config.ts  project.json
apps/nice-blog/: .eslintrc.json  jest.config.ts  project.json
apps/nice-front/: .eslintrc.json  jest.config.ts  project.json
apps/nice-front-deleteagain/: jest.config.ts  project.json  tsconfig.json
apps/nice-mapper/: jest.config.ts  project.json
apps/nice-mapper-delete/: jest.config.ts  project.json
docs/: devnotes.md  todo.md
libs/nice-common-delete/: README.md  jest.config.ts  package.json  (+1 more)
modules/: readme.modules.md
modules/nice-camera/: .gitignore  background_removal.py  pyproject.toml
modules/nice-camera/nice_camera/: __init__.py  camera_rgb.py  detector_v1.py  fresh_frame.py  run.py  threadedVideoCapture.py
modules/nice-lights/: pyproject.toml
modules/nice-lights/books/: exploration copy.ipynb  exploration.ipynb
modules/nice-lights/nice_lights/: __init__.py  lights.py  main.py
nice-action/: package.json
nice-blog/: package-lock.json  package.json
nice-camera/: .gitignore  requirements.txt
nice-common/: package.json  tsconfig.json
nice-lights/: requirements.txt
nice-mapper/: lightsApiClient.ts  mapper.ts  mapping_2021-02-06_235555_result.json  mapping_2021-02-07_193700_result.json  package-lock.json  package.json  tsconfig.json
nice-web-ui/: package-lock.json  package.json  tsconfig.json
old/: package.json  readme.modules.old.md  todo.md  tsconfig.json
(+244 files in other folders)
