[tool.poetry]
name = "nice-camera"
version = "0.1.0"
description = ""
authors = ["Espen Halvorsen <espen.halvorsen@gmail.com>"]
readme = "README.md"
packages = [{include = "nice_camera"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-contrib-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "nice_camera.run:start"