[tool.poetry]
name = "nice-camera"
version = "0.1.0"
description = ""
authors = ["Espen Halvorsen <espen.halvorsen@gmail.com>"]
readme = "README.md"
packages = [{include = "nice_camera"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-contrib-python = "^4.6.0.66"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
ipykernel = "^6.22.0"
websocket-client = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "nice_camera.run:start"